Optimize API
